---------------------------------------------------------------------------------------------------
Version: 0.8.5
Date: 2025-12-09
  Changes:
    - Warp pylon maximum range is now 120 due to performance reasons
    - Added a setting to make harene crafting chain easier
---------------------------------------------------------------------------------------------------
Version: 0.8.4
Date: 2025-12-06
  Balancing:
    - Vault support requesters can now only spawn up to 6 pylons during their lifetime
    - Reduced protection pylon's resistance to fire damage (100% -> 25%)
    - Flamethrower turrets now accept energetic residue and harenic lava
    - Vault console now has a fixed recipe, no longer accepting vault access key
    - Increased health of hack attempts (80 -> 100 / 620 -> 800)
    - Increased capture speed bonus of Vault security key (+25% -> +40%)
  Bugfixes:
    - Fixed vault console could be hacked indefinitely by using logistics network
---------------------------------------------------------------------------------------------------
Version: 0.8.3
Date: 2025-12-04
  Bugfixes:
    - Fixed description of machines with E.A.R.S.
    - Fixed Warpin from pylons not working
---------------------------------------------------------------------------------------------------
Version: 0.8.2
Date: 2025-11-30
  Bugfixes:
    - Fixed hacks lasting way too long due to resistance changes
---------------------------------------------------------------------------------------------------
Version: 0.8.1
Date: 2025-11-29
  Balancing:
    - Increased yield and spawn rate of Rabbascan rocks
  Bugfixes:
    - Fixed potential crash when deconstructing a warp pylon
---------------------------------------------------------------------------------------------------
Version: 0.8.0
Date: 2025-11-29
  Changes:
    - This update adds challenging content to the late game and reorganizes some rabbascan technologies