@@ -197,6 +197,8 @@ rabbasca-evolution-per-vault=Alertness change per hacked vault
 rabbasca-disable-train-extensions=Disable Train Extensions
 rabbasca-show-alertness-ui=Show Alertness indicator on Rabbasca
 rabbasca-surface-megawatts=Harenic energy field strength (in MW)
+rabbasca-harene-easy-mode=Simplify __FLUID__harene__ crafting chain 
+rabbasca-no-extra-category=Remove Rabbasca item category
 
 [mod-setting-description]
 rabbasca-cap-bunnyhop-research=Remove Bunnyhop infinity research, limiting jumps to moons and close planets only.
@@ -206,6 +208,8 @@ rabbasca-evolution-per-vault=Rabbasca's evolution alternative is calculated by m
 rabbasca-disable-train-extensions=Disable the __TECHNOLOGY__rabbasca-railway__ technology, which adds new locomotives and cargo wagons with equipment grid.
 rabbasca-show-alertness-ui=Add a small UI indicator to the top left showing current alertness level. The indicator is only visible while looking at Rabbasca's surface.\nChanges to this value will be applied after the next alertness update or when looking at different surfaces.
 rabbasca-surface-megawatts=The amount of power available for use in Rabbasca's electricity grid. 
+rabbasca-harene-easy-mode=Crafting __FLUID__harene__ requires multiple steps on different planets. This setting removes surface conditions of some items involved.
+rabbasca-no-extra-category=Removes the separate Rabbasca tab in factoriopedia and crafting ui, moving the items and recipes into existing categories
 
 [equipment-name]
 bunnyhop-engine-equipment=Bunnyhop Engine
